[FFC] Fix hypothetical and clamped main size computation https://bugs.webkit.org/show_bug.cgi?id=279848

Reviewed by Antti Koivisto.

Both hypothetical and clamped main size computation use the 'used main size' which in infinite when its computed value is initial (none).

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::usedMinimumMainSize const):
(WebCore::Layout::FlexFormattingUtils::usedMaxiumMainSize const):
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.h:
(WebCore::Layout::FlexFormattingUtils::formattingContext const):
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::flexBaseAndHypotheticalMainSizeForFlexItems):
(WebCore::Layout::FlexLayout::computeMainSizeForFlexItems const):
(WebCore::Layout::FlexLayout::formattingContext const):
(WebCore::Layout::FlexLayout::formattingUtils const):
(WebCore::Layout::FlexLayout::formattingContext): Deleted.
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.h:
* Source/WebCore/layout/formattingContexts/flex/LogicalFlexItem.h:

Canonical link: https://commits.webkit.org/283871@main